--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
   <name>employee Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    
 	<!-- https://mvnrepository.com/artifact/junit/junit -->
 	<dependency>
 	    <groupId>junit</groupId>
@@ -16,21 +15,20 @@
 	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
-    
     <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 	<dependency>
 	  <groupId>com.google.code.gson</groupId>
 	  <artifactId>gson</artifactId>
 	  <version>2.8.5</version>
 	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/javax.servlet/jsp-api -->
-	<dependency>
-	    <groupId>javax.servlet</groupId>
-	    <artifactId>jsp-api</artifactId>
-	    <version>2.0</version>
-	    <scope>provided</scope>
-	</dependency>	    
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>employee</finalName>
